--- a/MagicVilla_API/appsettings.json
+++ b/MagicVilla_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=DESKTOPPC\\DEVSQL;Database=VillaAPI;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
