--- a/MagicVilla_API/appsettings.json
+++ b/MagicVilla_API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultSQLConnection": "Server=DESKTOPPC\\DEVSQL;Database=VillaAPI;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "Secret": "Rad des Schicksals in Gottes Hand"
   }
 }
